--- a/bakalarka-frontend/src/app/app.component.html
+++ b/bakalarka-frontend/src/app/app.component.html
@@ -1,53 +1,16 @@
 <app-header></app-header>
 <mat-sidenav-container>
   <mat-sidenav mode="side" opened>
-    
+    <nav>
+      <h6>Číselníky</h6>
+
+      <ul>
+        <li><a routerLink="/settings">Dochádzka</a></li>
+        <li>Cvičenia</li>
+      </ul>
+    </nav>
   </mat-sidenav>
   <mat-sidenav-content>
-      <div class="jumbotron">
-        <h1 class="display-3">Import dát</h1>
-        <p class="lead">Údaje označené symbolom <strong>*</strong> sú povinné.</p>
-        <mat-divider></mat-divider>
-
-        <mat-radio-group [(ngModel)]="selectedImport" class="mt-4">
-          <mat-radio-button value="Attendance">Dochádzka</mat-radio-button>
-          <mat-radio-button value="Grades">Študijné výsledky</mat-radio-button> 
-          <mat-radio-button value="Students">Študenti</mat-radio-button> 
-          <mat-radio-button value="Schools">Školy</mat-radio-button> 
-        </mat-radio-group>
-
-        <mat-divider></mat-divider>
-
-        <section class="checkboxes">
-          <mat-checkbox>Vymazať predošlé dáta</mat-checkbox>
-        </section>
-
-        <mat-divider></mat-divider>
-
-        <section class="file-input">
-          <input id="fileInput" name="file" type="file" class="ng-hide" #fileInput (change)="onFileSelected($event)">
-          <button 
-            mat-raised-button 
-            color="primary" 
-            (click)="addFile()"
-            [disabled]="selectedImport == ''">Vybrať súbor
-          </button>
-          <span>{{ fileName }}</span>
-        </section>
-
-        <button 
-          class="btn-lg float-right"
-          mat-raised-button 
-          color="primary" 
-          (click)="onUpload()"
-          [disabled]="selectedFile == null">Importovať
-        </button>
-      </div>
-
-      
-
-    <app-data-tables></app-data-tables>
-    <button (click)="uploadData()">LOL</button>
-
+      <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
