--- a/bakalarka-frontend/src/app/import/import.component.html
+++ b/bakalarka-frontend/src/app/import/import.component.html
@@ -38,6 +38,8 @@
     (click)="onUpload()"
     [disabled]="selectedFile == null">Importovať
   </button>
+
+  <button routerLink="/api/test">TEST</button>
 </div>
 
 <app-data-tables></app-data-tables>
