--- a/bakalarka-frontend/src/app/app.component.html
+++ b/bakalarka-frontend/src/app/app.component.html
@@ -3,11 +3,9 @@
   
   <mat-sidenav mode="side" opened padding>
     <nav>
-      <h6>Číselníky</h6>
-
       <ul>
-        <li><a routerLink="/settings">Dochádzka</a></li>
-        <li>Cvičenia</li>
+        <li><a routerLink="/">Importovanie dát</a></li>
+        <li><a routerLink="/settings">Číselníky</a></li>
       </ul>
     </nav>
   </mat-sidenav>
