--- a/bakalarka-frontend/src/app/settings/settings.component.html
+++ b/bakalarka-frontend/src/app/settings/settings.component.html
@@ -1,5 +1,8 @@
 <h1 class="display-4">Nastavenie číselníkov</h1>
 
-<app-codebook-table title="Dochádzka" codebookType="attendanceTypes"></app-codebook-table>
-<app-codebook-table title="Typ strednej školy" codebookType="highSchoolTypes"></app-codebook-table>
+<app-codebook-table 
+  *ngFor="let codebook of codebooks"
+  [title]="codebook.title" 
+  [codebookType]="codebook.type"
+></app-codebook-table>
 
