google maps integration

--- a/bakalarka-frontend/src/app/admissions/admissions.component.html
+++ b/bakalarka-frontend/src/app/admissions/admissions.component.html
@@ -1,6 +1,8 @@
 <h1 class="display-4">Prijímacie konanie</h1>
 <hr>
 
+<app-map [markers]="schools"></app-map>
+
 <div class="row">
   <div class="col-lg-6">
     <app-chart
