--- a/bakalarka-frontend/src/app/admissions/admission/admission.component.html
+++ b/bakalarka-frontend/src/app/admissions/admission/admission.component.html
@@ -1,5 +1,5 @@
 <div flex justify-content-between>
-  <h1 class="display-3">Prihláška - {{ admission.Meno }} {{ admission.Priezvisko }}</h1>
+  <h1 class="display-3">Prihláška - <strong>{{ admission.Meno }} {{ admission.Priezvisko }}</strong></h1>
   <div flex>
     <h1 *ngIf="otherAdmissions" class="display-3 admissions-count"><span class="text-muted" style="font-size: 16px;">Počet prihlášok tohto uchádzača:</span> {{ otherAdmissions.data.length }} </h1>
 
@@ -119,6 +119,8 @@
         </tr>
       </tbody>
     </table>
+
+    <app-map [singleMarker]="true" [marker]="school" [height]="400"></app-map>
   </div>
   <div class="col-lg-6">
     <app-chart
