--- a/bakalarka-frontend/src/app/admissions/admissions.component.html
+++ b/bakalarka-frontend/src/app/admissions/admissions.component.html
@@ -1,7 +1,7 @@
 <h1 class="display-4">Prijímacie konanie</h1>
 <hr>
 
-<app-map [markers]="schools"></app-map>
+<app-map [markers]="schools" [height]="600"></app-map>
 
 <div class="row">
   <div class="col-lg-6">
