--- a/bakalarka-frontend/src/app/core/header/header.component.html
+++ b/bakalarka-frontend/src/app/core/header/header.component.html
@@ -26,5 +26,12 @@
         </div>
       </li>
     </ul>
+
+    <form class="form-inline my-2 my-lg-0">
+      <select [(ngModel)]="selectedYear" name="year" class="custom-select" (change)="onYearSelect()">
+        <option value="all">Choose...</option>
+        <option value="2018-2019">2018/2019</option>
+      </select>
+    </form>
   </div>
 </nav>
