--- a/bakalarka-frontend/src/app/core/header/header.component.html
+++ b/bakalarka-frontend/src/app/core/header/header.component.html
@@ -29,7 +29,10 @@
 
     <form class="form-inline my-2 my-lg-0">
       <select [(ngModel)]="selectedYear" name="year" class="custom-select" (change)="onYearSelect()">
-        <option value="all">Choose...</option>
+        <option value="all">Všetko</option>
+        <option value="2015-2016">2015/2016</option>
+        <option value="2016-2017">2016/2017</option>
+        <option value="2017-2018">2017/2018</option>
         <option value="2018-2019">2018/2019</option>
       </select>
     </form>
