--- a/bakalarka-frontend/src/styles.css
+++ b/bakalarka-frontend/src/styles.css
@@ -32,6 +32,23 @@ body {
     padding: 16px;
 }
 
+[padding-left] {
+  padding-left: 16px;
+}
+
+[padding-right] {
+  padding-right: 16px;
+}
+
+[padding-bottom] {
+  padding-bottom: 16px;
+}
+
+[padding-top] {
+  padding-top: 16px;
+}
+
+
 [full-width] {
     width: 100%;
 }
