frontend fixes, map style themes

--- a/bakalarka-frontend/src/app/plugins/map/map.component.html
+++ b/bakalarka-frontend/src/app/plugins/map/map.component.html
@@ -1,7 +1,9 @@
-<agm-map *ngIf="markers.length"
+<agm-map
+  *ngIf="markers.length"
   [ngStyle]="{ 'height.px': height }"
   [latitude]="lat"
   [longitude]="lng"
+  [styles]="styles.silver"
   (mapReady)="onMapLoad($event)"
 >
   <agm-marker
