google maps heatmap

--- a/bakalarka-frontend/src/app/admissions/admission/admission.component.html
+++ b/bakalarka-frontend/src/app/admissions/admission/admission.component.html
@@ -120,7 +120,7 @@
       </tbody>
     </table>
 
-    <app-map [singleMarker]="true" [marker]="school" [height]="400"></app-map>
+    <app-map [markers]="[school]" [height]="400"></app-map>
   </div>
   <div class="col-lg-6">
     <app-chart
