--- a/bakalarka-frontend/src/app/admissions/admissions.component.html
+++ b/bakalarka-frontend/src/app/admissions/admissions.component.html
@@ -72,7 +72,18 @@
   </div>
 </div>
 
+<h2>Pôvod študentov</h2>
+<div class="row">
+  <div class="col-lg-4">
 
-
-
+  </div>
+  <div class="col-lg-8">
+    <app-map
+      [markers]="admissions"
+      [height]="500"
+      [showHeatMap]="true"
+      [showMarkers]="false"
+    ></app-map>
+  </div>
+</div>
 
