google maps error fixes

--- a/bakalarka-frontend/src/app/plugins/map/map.component.html
+++ b/bakalarka-frontend/src/app/plugins/map/map.component.html
@@ -21,3 +21,6 @@
   <option value="silver">Silver</option>
   <option value="nightMode">Nočný režim</option>
 </select>
+
+<input type="range" name="radius">
+<input type="range" name="intensity">
