--- a/bakalarka-frontend/src/app/admissions/admissions.component.html
+++ b/bakalarka-frontend/src/app/admissions/admissions.component.html
@@ -64,6 +64,7 @@
     </table>
 
     <app-chart
+      *ngIf="chosenSchool.admissions.length"
       [legend]="false"
       [type]="'bar'"
       [data]="[chosenSchool.approved, chosenSchool.rejected]"
