--- a/bakalarka-frontend/src/app/login/login.component.html
+++ b/bakalarka-frontend/src/app/login/login.component.html
@@ -5,5 +5,5 @@
     <mat-form-field>
       <input matInput type="password" name="password" placeholder="Heslo" [(ngModel)]="_password">
     </mat-form-field>
-  <button [disabled]="!(_email && _password)" mat-raised-button>Prihlasit</button>
+  <button [disabled]="!(_email && _password)" mat-raised-button>Prihlásiť</button>
 </form>
