--- a/bakalarka-frontend/src/app/core/header/header.component.html
+++ b/bakalarka-frontend/src/app/core/header/header.component.html
@@ -26,8 +26,12 @@
         </div>
       </li>
 
-      <li *ngIf="!authService.loggedIn"><a routerLink="/login">Prihlasenie</a></li>
-      <li *ngIf="authService.loggedIn"><a (click)="logoutUser()">Odhlasenie</a></li>
+      <li *ngIf="!authService.loggedIn" class="nav-item">
+        <a class="nav-link" routerLink="/login">Prihlasenie</a>
+      </li>
+      <li *ngIf="authService.loggedIn" class="nav-item">
+        <a class="nav-link" (click)="logoutUser()">Odhlasenie</a>
+      </li>
     </ul>
 
     <form class="form-inline my-2 my-lg-0">
