filtrovanie, uprava grafiky, update mapy regionov (pocet studentov z jednotlivych krajov

--- a/bakalarka-frontend/src/app/app.component.html
+++ b/bakalarka-frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-sidenav></app-sidenav>
 <div>
   <app-header></app-header>
-  <main>
+  <main padding>
     <router-outlet></router-outlet>
   </main>
 </div>
