frontend changes, list of admissions for speciffic school

--- a/bakalarka-frontend/src/app/core/header/header.component.html
+++ b/bakalarka-frontend/src/app/core/header/header.component.html
@@ -35,7 +35,7 @@
     </ul>
 
     <form class="form-inline my-2 my-lg-0">
-      <select [(ngModel)]="selectedYear" name="year" (change)="onYearSelect()">
+      <select [(ngModel)]="selectedYear" class="custom-select" name="year" (change)="onYearSelect()">
         <option value="all">Všetko</option>
         <option value="2015-2016">2015/2016</option>
         <option value="2016-2017">2016/2017</option>
