--- a/bakalarka-frontend/src/styles.scss
+++ b/bakalarka-frontend/src/styles.scss
@@ -32,6 +32,18 @@ body {
     justify-content: space-between;
 }
 
+[full-width] {
+  width: 100%;
+}
+
+[full-height] {
+  height: 100%;
+}
+
+[text-center] {
+  text-align: center;
+}
+
 [padding] {
     padding: 16px;
 }
@@ -52,31 +64,8 @@ body {
   padding-top: 16px;
 }
 
-
-[full-width] {
-    width: 100%;
-}
-
-[full-height] {
-    height: 100%;
-}
-
 [no-margin] {
     margin: 0 !important;
-}
-
-.sidebar .nav-link .feather {
-    margin-right: 4px;
-    color: #999;
-}
-
-svg:not(:root) {
-    overflow: hidden;
-}
-.feather {
-    width: 16px;
-    height: 16px;
-    vertical-align: text-bottom;
 }
 
 [margin] {
