data tables in import fix and refactoring

--- a/bakalarka-frontend/src/app/pages/import/import.component.html
+++ b/bakalarka-frontend/src/app/pages/import/import.component.html
@@ -77,8 +77,9 @@
     mat-raised-button
     color="primary"
     (click)="onUpload()"
-    [disabled]="selectedFile == null">Importovať
+    [disabled]="selectedFile == null">
+    Importovať
   </button>
 </div>
 
-<!--<app-data-tables></app-data-tables>-->
+<app-data-tables></app-data-tables>
