admissions: school years comparison page and todos in comments

--- a/bakalarka-frontend/src/app/core/header/header.component.html
+++ b/bakalarka-frontend/src/app/core/header/header.component.html
@@ -18,6 +18,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" routerLink="/admissions">Všeobecné</a>
+          <a class="dropdown-item" routerLink="/admissions/comparison">Porovnanie školských rokov</a>
 
           <div class="dropdown-divider"></div>
 
