--- a/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
@@ -1,5 +1,6 @@
 <div class="jumbotron">
   <h1 class="display-3">Prijímacie konanie</h1>
+  <p class="lead">Všeobecný prehľad</p>
   <hr class="my-4">
 
   <div class="row">
