divide admissions into groups - basic metrics

--- a/bakalarka-frontend/src/app/pages/admissions/admissions-bachelor/admissions-bachelor.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions-bachelor/admissions-bachelor.component.html
@@ -78,12 +78,51 @@
     </td>
   </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumnsAndActions()"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumnsAndActions();"></tr>
+  <tr mat-header-row *matHeaderRowDef="_displayedColumnsAndActions()"></tr>
+  <tr mat-row *matRowDef="let row; columns: _displayedColumnsAndActions();"></tr>
 </table>
 <mat-paginator [pageSizeOptions]="[10, 20, 50, 100]" showFirstLastButtons #paginator></mat-paginator>
 
-<div class="row">
+
+<div class="groups" margin-top>
+
+  <div class="row">
+    <div class="col-lg-4">
+      <label for="numberOfGroups">Počet skupín</label>
+      <input
+        id="numberOfGroups"
+        [(ngModel)]="numberOfGroups"
+        class="form-control"
+        type="number"
+        name="numberOfGroups"
+        (change)="_calculateGroups()"
+      >
+    </div>
+    <div class="col-lg-8">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Rozpätie bodov</th>
+            <th scope="col">Priemer bodov</th>
+            <th scope="col">Median</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let group of groups; let i = index">
+            <th>{{ i + 1 }}</th>
+            <td>{{ group.arr[0] }} - {{ group.arr[group.arr.length-1] }}</td>
+            <td>{{ group.mean }}</td>
+            <td>{{ group.median }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+</div>
+
+<div class="row" margin-top>
   <div class="col-lg-6">
     <app-chart
       [title]="'Počet prihlášok na jednotlivé študijné programy'"
